--- a/product.html
+++ b/product.html
@@ -15,15 +15,15 @@
 <body>
   <div  class="container">
     <header>
-      <h1>My Super SaaS</h1>
+      <h1 id="home">My Super SaaS</h1>
     </header>
     <nav>
       <ul >
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Tour</a></li>   
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#tour">Tour</a></li>   
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
      <br clear="all">
     </nav>
