fixed side menu problems

--- a/product.html
+++ b/product.html
@@ -7,9 +7,9 @@
     See: http://necolas.github.com/normalize.css/
   -->
   <link rel="stylesheet" href="normalize.css">
-
-  <!-- Put your challenge-specific CSS in here -->
   <link rel="stylesheet" href="main.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="application.js"></script>
   <title></title>
 </head>
 <body>
@@ -27,6 +27,7 @@
       </ul>
      <br clear="all">
     </nav>
+    <a href="#" id="sesame">Close Sesame</a>
     <div class="content">
       <h2>You are so totally going to love this application.</h2>
       <div id="registration">
